# ai-engineering-foundations

./: .gitignore  README.md
chapter1/: 1.1-rise-of-ai-engineering.md  1.2-foundation-model-use-cases.md  1.3-planning-ai-applications.md  1.4-ai-engineering-stack.md  README.md
chapter2/: 2.1-training-data.md  2.2-modeling.md  2.3-post-training.md  2.4-sampling.md  README.md
chapter3/: 3.1-evaluation-challenges.md  3.2-language-modeling-metrics.md  3.3-exact-evaluation.md  3.4-ai-as-judge.md  3.5-comparative-evaluation.md  README.md
chapter4/: 4.1-evaluation-criteria.md  4.2-model-selection.md  4.3-evaluation-pipeline.md  README.md
chapter5/: 5.1-introduction-to-prompting.md  5.2-prompt-engineering-best-practices.md  5.3-defensive-prompt-engineering.md  README.md
chapter6/: 6.1-rag.md  6.2-agents.md  6.3-memory.md  README.md
notebooks/2.4-sampling/: .env.example  .gitignore  2.4-sampling-practice.ipynb  README.md  pyproject.toml
